<resources>
    <string name="app_name">CapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="detail">Detail</string>
    <string name="profile">Profile</string>
    <string name="in_dataset">%s in Dataset</string>
    <string name="in_good_quality">%1$s%% %2$s in Good Quality</string>
    <string name="title_home">Home</string>
    <string name="title_analysis">Analysis</string>
    <string name="title_profile">Profile</string>
    <string name="pie_title">Fruits Total in Dataset (in %)</string>
    <string name="prediction">prediction</string>
    <string name="predict_img">predict!</string>
    <string name="pick_img">pick image</string>
    <string name="img">image</string>
    <string name="insert_db">insert data</string>
    <string name="no_db">No Data Found in Database</string>
</resources>