<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding_giant"
        android:background="#D8E3E7"
        tools:context=".ui.home.HomeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="350dp"
            android:layout_height="250dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#126E82"
            app:cardCornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:backgroundTint="#51C4D3"
                app:cardCornerRadius="20dp">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/bar_chart"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_margin="@dimen/padding_big"/>

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_pick_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_predict_img"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:backgroundTint="@color/teal_700"
            android:layout_marginTop="@dimen/padding_mid"
            android:text="@string/pick_img"/>

        <Button
            android:id="@+id/btn_predict_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btn_pick_img"
            app:layout_constraintRight_toLeftOf="@id/btn_insert_db"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:backgroundTint="@color/teal_700"
            android:layout_marginTop="@dimen/padding_mid"
            android:text="@string/predict_img"/>

        <Button
            android:id="@+id/btn_insert_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btn_predict_img"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view"
            android:backgroundTint="@color/teal_700"
            android:layout_marginTop="@dimen/padding_mid"
            android:text="@string/insert_db"/>

        <ImageView
            android:id="@+id/my_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_pick_img"
            android:layout_margin="16dp"
            android:background="@color/teal_700"
            android:contentDescription="@string/img" />

        <TextView
            android:id="@+id/prediction_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_img"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/gray"
            android:text="@string/prediction"/>

        <TextView
            android:id="@+id/prediction_num_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prediction_txt"
            android:layout_marginTop="16dp"
            android:textColor="@color/gray"
            android:text="@string/prediction"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>